# compliance-ai

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_interviews_scores_deviations_reports.py  003_unified_framework_tables.py  004_migrate_nist_csf_data.py  005_add_requirement_id_columns.py  006_create_backward_compat_views.py  007_add_password_hash.py  008_add_user_preferences.py  009_add_is_guest_to_users.py  010_add_assessment_depth.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/api/v1/: __init__.py  assessments.py  auth.py  clusters.py  controls.py  crosswalks.py  dashboard.py  deviations.py  mappings.py  (+7 more)
backend/app/core/: ai_client.py  config.py  permissions.py
backend/app/data/: csf_2_0.json  question_bank.json
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  assessment.py  audit.py  control.py  deviation.py  framework.py  interview.py  policy.py  report.py  score.py  unified_framework.py  user.py
backend/app/schemas/: __init__.py  assessment.py  auth.py  common.py  control.py  dashboard.py  deviation.py  framework.py  interview.py  mapping.py  policy.py  report.py  score.py  user.py
backend/app/services/: seed_service.py
backend/compliance_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: seed_nvidia_test.py
backend/tests/: conftest.py  test_api.py  test_health.py  test_migrations.py
backend/tests/fixtures/: sample_controls.csv  sample_policy.txt
(+186 files in other folders)
