[project]
name = "compliance-ai"
version = "0.1.0"
description = "AI-driven NIST CSF 2.0 compliance assessment engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Data ingestion
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    # AI/Anthropic
    "anthropic>=0.39.0",
    "tenacity>=8.2.0",
    # Authentication
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    # PDF Generation
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
